--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,57 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
+# Dependencies
+node_modules/
 .pnp.*
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+.pnpm-store/
 
-# testing
-/coverage
+# Testing and Coverage
+coverage/
+*.lcov
+.nyc_output/
 
-# next.js
-/.next/
-/out/
+# Build outputs
+.next/
+out/
+build/
+dist/
 
-# production
-/build
+# Environment and secrets
+.env*
+*.env
+.env.local
+.env.*.local
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Debug logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# IDE and Editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+*.pem
+.cursorrules
+.cursor
 
-# vercel
-.vercel
-
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
 
-# vscode
-.vscode/
+# Vercel
+.vercel/
+
+# Cache
+.cache/
+.temp/
